src/test/ui/resolve/privacy-struct-ctor.stderr
error[E0423]: expected value, found struct `Z`
  --> $DIR/privacy-struct-ctor.rs:18:9
   |
LL |         Z;
   |         ^ constructor is not visible here due to private fields
help: a tuple struct with a similar name exists
   |
LL |         S;
   |         ^
help: possible better candidate is found in another module, you can import it into scope
   |
LL |     use m::n::Z;
   |

error[E0423]: expected value, found struct `S`
  --> $DIR/privacy-struct-ctor.rs:27:5
   |
LL |     S;
   |     ^ constructor is not visible here due to private fields
help: possible better candidate is found in another module, you can import it into scope
   |
LL | use m::S;
   |

error[E0423]: expected value, found struct `S2`
  --> $DIR/privacy-struct-ctor.rs:30:5
   |
LL |     S2;
   |     ^^ did you mean `S2 { /* fields */ }`?

error[E0423]: expected value, found struct `xcrate::S`
  --> $DIR/privacy-struct-ctor.rs:33:5
   |
LL |     xcrate::S;
   |     ^^^^^^^^^ constructor is not visible here due to private fields
help: possible better candidate is found in another module, you can import it into scope
   |
LL | use m::S;
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0423`.
